--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "oktak <000@gmail.com>",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@reach/dialog": "^0.7.0",
     "@reach/router": "^1.2.1",
     "@reach/tabs": "^0.7.0",
@@ -39,6 +40,7 @@
     "@storybook/preset-create-react-app": "^1.5.2",
     "@storybook/react": "^5.3.8",
     "babel-loader": "^8.1.0",
+    "babel-preset-react-app": "^9.1.2",
     "prettier": "^1.19.1"
   },
   "keywords": [
